--- a/reactMovieApp/package.json
+++ b/reactMovieApp/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +54,8 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
+    "msw": "^0.49.1",
     "react-test-renderer": "^18.2.0"
   }
 }
