--- a/reactMovieApp/package.json
+++ b/reactMovieApp/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "coverage": "^0.4.1",
+    "jest-fetch-mock": "^3.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "enzyme": "^3.11.0",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -54,8 +56,8 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
-    "jest-fetch-mock": "^3.0.3",
     "msw": "^0.49.1",
+    "react-shallow-renderer": "^16.15.0",
     "react-test-renderer": "^18.2.0"
   }
 }
